Spacing fixes.

--- a/themes/bootprint3/less/forms.less
+++ b/themes/bootprint3/less/forms.less
@@ -1,3 +1,5 @@
+legend { margin: 0; }
+
 @media (min-width: 768px) {
   .form-fix-database,
   .form-oai-home,
