--- a/themes/bootstrap3/less/components/advanced-search.less
+++ b/themes/bootstrap3/less/components/advanced-search.less
@@ -81,7 +81,8 @@
   .fieldset {
     float: left;
     width: 33%;
-    padding: 1rem .5rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
   }
   .solr-facets,
   .summon-facets,
@@ -89,6 +90,8 @@
     float: none;
     width: auto;
   }
+  .solr-facets,
+  .summon-facets { margin-top: 1rem; }
   .summon-facets .facet-fieldset {
     float: left;
     width: 50%;
